--- a/website/index.html
+++ b/website/index.html
@@ -44,16 +44,16 @@
                 <h2><select name="settings-selector" id="settings-selector" class="selector dev-change" onchange="changeSettingsSubpage()">
                     <option value="basicSettings">Basic Settings</option>
                     <option value="advancedSettings" >More Settings</option>
-                    <option value="devSettings" class="dev-hidden" >Dev Settings</option>
+                    <option value="devSettings" class="dev-hidden" >Development</option>
                 </select></h2>
                 <div class="subpage" id="basicSettings">
                     <ul id="basic-settings-list">
-                        <li><button disabled class="option-item" id="levelModeButton" title="Select your experience level.">Level<span id="level-button-status" class="b-label-status">1</span><br /><span
+                        <li><button disabled class="option-item" id="levelModeButton" title="Select your experience level.">Level<span id="level-button-status" class=" b-label-status notranslate" translate="no">1</span><br /><span
                             class="button-sub">(select difficulty)</span></button>
                         </li>
                         <li><button class="option-item" id="button-conversation" title="Talk with Dorie." onclick="appConversation.toggleConversation()">Conversation<span
-                            class="hidden b-label-status" id="button-conversation-on">ON</span><span
-                            id="button-conversation-off" class="b-label-status">OFF</span><br /><span
+                            class="hidden  b-label-status notranslate" translate="no" id="button-conversation-on">ON</span><span
+                            id="button-conversation-off" class=" b-label-status notranslate" translate="no">OFF</span><br /><span
                             class="button-sub">(talk with Dorie)</span></button>
                         </li>
                         <li><button type="button" disabled class="option-item" id="howToUse" title="Get an introduction about the navigation and features.">How to use<br /><span
@@ -67,18 +67,18 @@
                 <div class="subpage" id="advancedSettings">
                     <ul id="advanced-settings-list">
                         <li><button class="option-item" id="button-decimalPlaces" title="Allow randomly decimal places in the task.">Decimal Places <span
-                                    class="hidden b-label-status" id="decimalPlaces-button-on">ON</span><span
-                                    id="decimalPlaces-button-off" class="b-label-status">OFF</span><br /><span
+                                    class="hidden  b-label-status notranslate" translate="no" id="decimalPlaces-button-on">ON</span><span
+                                    id="decimalPlaces-button-off" class=" b-label-status notranslate" translate="no">OFF</span><br /><span
                                     class="button-sub">(random)</span></button>
                         </li>
-                        <li><button class="option-item" id="button-voice" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();appVoice.toggleVoiceMode()">Dorie listens<span class="hidden b-label-status" id="button-voice-on">ON</span><span id="button-voice-off" class="b-label-status">OFF</span><br /><span
+                        <li><button class="option-item" id="button-voice" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();appVoice.toggleVoiceMode()">Dorie listens<span class="hidden  b-label-status notranslate" translate="no" id="button-voice-on">ON</span><span id="button-voice-off" class=" b-label-status notranslate" translate="no">OFF</span><br /><span
                             class="button-sub">(talk to Dorie with your voice)</span></button>
                         </li>
-                        <li><button class="option-item" id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Dorie speaks<span class="hidden b-label-status" id="sound-button-on">ON</span><span id="sound-button-off" class="b-label-status">OFF</span><br /><span class="button-sub">(get audio feedback for tasks)</span></button>
+                        <li><button class="option-item" id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Dorie speaks<span class="hidden  b-label-status notranslate" translate="no" id="sound-button-on">ON</span><span id="sound-button-off" class=" b-label-status notranslate" translate="no">OFF</span><br /><span class="button-sub">(get audio feedback for tasks)</span></button>
                         </li>
                         <li>
                             <button class="option-item">
-                                <span class="config-label">Break Length</span><span class="b-label-status"><select name="auto-task-selector" id="auto-task-selector" class="selector config" dir="rtl" onchange="solution.saveAutoTaskInterval()">
+                                <span class="config-label">Break Length</span><span class=" b-label-status notranslate" translate="no"><select name="auto-task-selector" id="auto-task-selector" class="selector config" dir="rtl" onchange="solution.saveAutoTaskInterval()">
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="5" selected="selected">5</option>
@@ -94,7 +94,7 @@
                         </li>
                         <li>
                             <button class="option-item">
-                                <span class="config-label">Solution Guide</span><span class="b-label-status"><select name="solution-guide-selector" id="solution-guide-selector" class="selector config" dir="rtl" onchange="solution.saveSolutionGuideInterval()">
+                                <span class="config-label">Solution Guide</span><span class=" b-label-status notranslate" translate="no"><select name="solution-guide-selector" id="solution-guide-selector" class="selector config" dir="rtl" onchange="solution.saveSolutionGuideInterval()">
                                     <option value="off">OFF</option>
                                     <option value="5">5</option>
                                     <option value="10">10</option>
@@ -110,7 +110,7 @@
                         </li>
                         <li>
                             <button class="option-item">
-                                <span class="config-label">Number Sizes:</span><span class="b-label-status"><input class="config" type="number" id="f1" name="factor1" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};"
+                                <span class="config-label">Number Sizes:</span><span class=" b-label-status notranslate" translate="no"><input class="config" type="number" id="f1" name="factor1" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};"
                                 oninput="newTask(false)" />⋅<input class="config" type="number" id="f2" name="factor2" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};"
                                 oninput="newTask(false)" /></span><br /><span
                                 class="button-sub">(2⋅3=xx⋅yyy)</span>
@@ -124,10 +124,10 @@
                     </ul>
                 </div>
                 <div class="subpage hidden" id="devSettings">
-                    <ul id="dev-settings-list" class="subpage">
-                        <li><button class="option-item debugging dev-hidden" id="button-logging" title="Switch between debug mode and default." class="hidden debugging">Logging is  <span class="hidden b-label-status" id="button-logging-on">ON</span><span id="button-logging-off" class="b-label-status">OFF</span><br/><span></span></button>
+                    <ul id="dev-settings-list" class="subpage notranslate" translate="no">
+                        <li><button class="option-item debugging dev-hidden" id="button-logging" title="Switch between debug mode and default." class="hidden debugging">Logging is  <span class="hidden  b-label-status notranslate" translate="no" id="button-logging-on">ON</span><span id="button-logging-off" class=" b-label-status notranslate" translate="no">OFF</span><br/><span></span></button>
                         </li>
-                        <li><button class="option-item debugging dev-hidden" id="button-voice-tech" title="Switch between types of speech recognition loop." class="hidden debugging">Voice Rec.: <span class="hidden b-label-status" id="button-voice-tech-endless">ENDLESS</span><span id="button-voice-tech-noise" class="b-label-status">NOISE</span><br/><span></span></button>
+                        <li><button class="option-item debugging dev-hidden" id="button-voice-tech" title="Switch between types of speech recognition loop." class="hidden debugging">Voice Rec.: <span class="hidden  b-label-status notranslate" translate="no" id="button-voice-tech-endless">ENDLESS</span><span id="button-voice-tech-noise" class=" b-label-status notranslate" translate="no">NOISE</span><br/><span></span></button>
                         </li>
                     </ul>
                 </div>
