--- a/website/index.html
+++ b/website/index.html
@@ -31,7 +31,7 @@
                 <img id="stats-image" alt="Statistics" src="img/stats_100x100.png" />
             </figure>
             <figure id="header-right" onclick="onClickNavPage()" class="inactive-page-icon">
-                <img id="settings-image" alt="Settings" src="img/settings_200x200.png" />
+                <img id="settings-image" alt="Settings" src="img/settings_200x200b.png" />
             </figure>
         </header>
         <div id="content">
