--- a/website/index.html
+++ b/website/index.html
@@ -180,7 +180,9 @@
         newTask();
 
         setTimeout(function() {
+            // hacks to ignore strange behavior of google translate
             setSelectedLanguage(getBrowserLanguage())
+            document.getElementsByTagName('body')[0].removeAttribute("style");
         }, 1000)
     </script>
 </body>
