fix vr restart after screen saver

--- a/website/index.html
+++ b/website/index.html
@@ -156,7 +156,7 @@
                 </section>
                 <section id="input" class="speech">
                     <img id="mic-image" class="hidden" src="img/32px-Font_Awesome_5_solid_microphone-alt.svg.png" />
-                    <input type="number" id="solution" name="solution" placeholder="=" onkeyup="guessInput()" onselect="return false;" onfocus="return false;" />
+                    <input type="number" id="solution" name="solution" placeholder="=" onkeyup="guessInput()" onclick="appVoice.startRecognition()" onselect="return false;" onfocus="return false;" />
                 </section>
                 <section id="clipboard">
                 </section>
