add notification feature

--- a/website/index.html
+++ b/website/index.html
@@ -176,6 +176,7 @@
     <script src="js/math/math_event.js"></script>
     <script src="js/statistics/statistics_event.js"></script>
     <script src="js/task/solution-view.js"></script>
+    <script src="js/notification/onboarding.js"></script>
     <script>
         newTask();
 
