--- a/website/index.html
+++ b/website/index.html
@@ -42,11 +42,11 @@
             </div>
             <div id="nav" class="hidden page">
                 <h2><select name="settings-selector" id="settings-selector" class="selector dev-change" onchange="changeSettingsSubpage()">
-                    <option value="basicSettings">Basic Settings</option>
-                    <option value="advancedSettings" >More Settings</option>
-                    <option value="devSettings" class="dev-hidden" >Development</option>
+                    <option value="settings-basic">Basic Settings</option>
+                    <option value="settings-advanced" >More Settings</option>
+                    <option value="settings-dev" class="dev-hidden" >Development</option>
                 </select></h2>
-                <div class="subpage" id="basicSettings">
+                <div class="subpage" id="settings-basic">
                     <ul id="basic-settings-list">
                         <li><button disabled class="option-item" id="levelModeButton" title="Select your experience level.">Level<span id="level-button-status" class=" b-label-status notranslate" translate="no">1</span><br /><span
                             class="button-sub">(select difficulty)</span></button>
@@ -64,7 +64,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="subpage" id="advancedSettings">
+                <div class="subpage" id="settings-advanced">
                     <ul id="advanced-settings-list">
                         <li><button class="option-item" id="button-decimalPlaces" title="Allow randomly decimal places in the task.">Decimal Places <span
                                     class="hidden  b-label-status" id="decimalPlaces-button-on">on</span><span
@@ -123,7 +123,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="subpage hidden" id="devSettings">
+                <div class="subpage hidden" id="settings-dev">
                     <ul id="dev-settings-list" class="subpage notranslate" translate="no">
                         <li><button class="option-item debugging dev-hidden" id="button-logging" title="Switch between debug mode and default." class="hidden debugging">Logging is  <span class="hidden  b-label-status" id="button-logging-on">on</span><span id="button-logging-off" class=" b-label-status">off</span><br/><span></span></button>
                         </li>
@@ -134,16 +134,16 @@
             </div>
             <div id="stats" class="hidden page">
                 <h2><select name="display-selector" id="display-selector" class="selector dev-change" onchange="changeDisplaySubpage()">
-                    <option value="history">History</option>
-                    <option value="loggings" class="hidden dev-hidden" >Loggings</option>
+                    <option value="stats-history">History</option>
+                    <option value="stats-loggings" class="hidden dev-hidden" >Loggings</option>
                 </select></h2>
-                <div class="subpage" id="history">
+                <div class="subpage" id="stats-history">
                     <h3>Your last results:</h3>
                     <ol reversed id="history-list">
 
                     </ol>
                 </div>
-                <div class="subpage" id="loggings">
+                <div class="subpage hidden" id="stats-loggings">
                     <h3>The last logging entries:</h3>
                     <ol reversed id="logging-list" translate="no" class="notranslate">
 
@@ -166,7 +166,6 @@
     <script type="text/javascript" src="js/language/translation.js"></script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="js/main/system.js"></script>
-    <script src="js/page/page_event.js"></script>
     <script src="js/dev/dev-view.js"></script>
     <script src="js/main/main_events.js"></script>
     <script src="js/task/task-view.js"></script>
@@ -176,6 +175,7 @@
     <script src="js/math/math_event.js"></script>
     <script src="js/statistics/statistics_event.js"></script>
     <script src="js/task/solution-view.js"></script>
+    <script src="js/page/page_event.js"></script>
     <script src="js/notification/onboarding.js"></script>
     <script>
         newTask();
