fix dev paging error

--- a/website/index.html
+++ b/website/index.html
@@ -44,7 +44,7 @@
                 <h2><select name="settings-selector" id="settings-selector" class="selector dev-change" onchange="changeSettingsSubpage()">
                     <option value="settings-basic">Basic Settings</option>
                     <option value="settings-advanced" >More Settings</option>
-                    <option value="settings-dev" class="dev-hidden" >Development</option>
+                    <option value="settings-dev" class="hidden dev-hidden" >Development</option>
                 </select></h2>
                 <div class="subpage" id="settings-basic">
                     <ul id="basic-settings-list">
