rename subtitle 11 sense

--- a/website/index.html
+++ b/website/index.html
@@ -25,7 +25,7 @@
         <header id="header">
             <div id="header-main" class="dev-change">
                 <h1 id="mainPageTrigger" onclick="onClickMainPage()">Dorie</h1>
-                <p onclick="onClickMainPage()">Agile Math Training</p>
+                <p onclick="onClickMainPage()">11. Sense - Discover Learning</p>
             </div>
             <figure id="header-left" onclick="onClickStatsPage()" class="inactive-page-icon">
                 <img id="stats-image" alt="Statistics" src="img/stats_100x100.png" />
