--- a/website/index.html
+++ b/website/index.html
@@ -24,8 +24,8 @@
     <div id="wrapper">
         <header id="header">
             <div id="header-main" class="dev-change">
-                <h1 id="mainPageTrigger" onclick="onClickMainPage()">Dorie</h1>
-                <p onclick="onClickMainPage()">11. Sense - Discover Learning</p>
+                <h1 id="mainPageTrigger" onclick="onClickMainPage()">11. Sense</h1>
+                <p onclick="onClickMainPage()"><span class="notranslate">Discover</span> ♡ <span class="notranslate">Learning</span></p>
             </div>
             <figure id="header-left" onclick="onClickStatsPage()" class="inactive-page-icon">
                 <img id="stats-image" alt="Statistics" src="img/stats_100x100.png" />
